# tpcds-util

./: .actrc  .containerignore  .gitignore  Containerfile  Containerfile.oracle-init  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-push.yml  release.yml  test.yml
docs/: ci-cd-setup.md  container-usage.md  local-testing-guide.md  native-usage.md
scripts/: download-oracle-client.sh  setup-oracle-client.sh  simulate-ci-env.sh  test-ci-locally.sh  test-components-locally.sh
src/tpcds_util/: __init__.py  cli.py  config.py  database.py  generator.py  loader.py  synthetic_generator.py
tests/: __init__.py  conftest.py
tests/adapters/: __init__.py  sqlite_adapter.py
tests/integration/: __init__.py  test_simple_sqlite.py
tests/unit/: __init__.py  test_cli.py
